[package]
edition = "2021"
name = "sb2md_cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
reqwest = {version = "0.11", features = ["blocking", "json"]}
sb2md_converter = {path = "../sb2md_converter"}
serde = {version = "1.0", features = ["derive"]}
url = "2.2.2"

[[bin]]
name = "sb2md_cli"
path = "src/main.rs"
