[package]
edition = "2021"
name = "sb2md_converter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "sb2md_converter"
path = "src/lib.rs"
